# daml

./: .bazelrc.edition  WORKSPACE  bazel-haskell-deps.bzl  bazel-java-deps.bzl  bench-norm-modes.sh  maven_install_2.13.json  security-evidence.md
bazel_tools/dev_env_tool/: dev_env_tool.bzl
bazel_tools/edition/: BUILD.bazel  defs.bzl
bazel_tools/ghc-lib/: BUILD.bazel  defs.bzl
ci/: build-unix.yml  build.yml
ci/cron/: daily-compat.yml
compatibility/: .bazelrc  .bazelrc.edition
compatibility/sandbox-migration/runner/Migration/: Runner.hs
compiler/damlc/tests/daml-test-files/: ContractIdInContractKey.daml  ContractIdInContractKeySkipCheck.daml  ContractIdInContractKeySkipCheckType.daml
compiler/lsp-tests/src/: Main.hs
daml-assistant/daml-sdk/: BUILD.bazel  validate.sh
daml-assistant/integration-tests/: BUILD.bazel
daml-script/daml/Daml/: Script.daml
daml-script/test/daml/: TestInterfaces.daml
dev-env/windows/manifests/: msys2.json
docs-tmp/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs-tmp/html/.doctrees/: environment.pickle  index.doctree
docs-tmp/html/app-dev/: app-arch.html  authorization.html  bindings-js.html  daml-lf-translation.html  ledger-api.html  services.html
docs-tmp/html/cheat-sheet/: index.html
docs-tmp/html/concepts/: glossary.html  identity-and-package-management.html  interoperability.html  local-ledger.html  time.html
docs-tmp/html/daml/: daml-studio.html  patterns.html  troubleshooting.html
docs-tmp/html/daml-integration-kit/: index.html
docs-tmp/html/daml-repl/: index.html
docs-tmp/html/daml-script/: index.html
docs-tmp/html/deploy/: generic_ledger.html  index.html  ledger-topologies.html
docs-tmp/html/getting-started/: app-architecture.html  first-feature.html  index.html  installation.html  manual-download.html  path-variables.html
docs-tmp/html/json-api/: index.html  lf-value-specification.html  production-setup.html  search-query-language.html
docs-tmp/html/ops/: index.html
docs-tmp/html/support/: compatibility.html  component-statuses.html  overview.html  releases.html  status-definitions.html  support.html
docs-tmp/html/tools/: assistant.html  codegen.html  extractor.html  non-repudiation.html  profiler.html  sandbox.html  visual.html
docs-tmp/html/triggers/: index.html
docs-tmp/html/upgrade/: automation.html  extend.html  index.html  upgrade.html
docs/source/: index.rst
docs/source/getting-started/: index.rst
docs/source/nested/: a.rst  c.rst  index.rst
docs/source/ops/: index.rst
language-support/ts/: defs.bzl
language-support/ts/codegen/: extract-ts-libs.sh
language-support/ts/daml-lapi/: regen.sh
language-support/ts/daml-ledger/: BUILD.bazel  index.ts
language-support/ts/daml-types/: index.ts
ledger-api/rs-grpc-akka/: BUILD.bazel
ledger-service/http-json/: BUILD.bazel
ledger/error/: BUILD.bazel
ledger/ledger-api-auth/: BUILD.bazel
ledger/ledger-api-test-tool/: BUILD.bazel
ledger/ledger-api-test-tool-on-canton/: BUILD.bazel
ledger/ledger-api-tests/: conformance.bzl
ledger/ledger-api-tests/tool/: BUILD.bazel
ledger/ledger-on-memory/: BUILD.bazel
ledger/ledger-on-sql/: BUILD.bazel
ledger/ledger-runner-common/: BUILD.bazel
ledger/metrics/: BUILD.bazel
ledger/participant-integration-api/: BUILD.bazel
ledger/participant-state/: BUILD.bazel
ledger/sandbox-classic/: BUILD.bazel
ledger/sandbox-common/: BUILD.bazel
ledger/sandbox-on-x/: BUILD.bazel
libs-haskell/da-hs-base/: BUILD.bazel
libs-scala/nameof/: README.md
nix/: bazel.nix  default.nix  nixpkgs.nix
nix/nixpkgs/: default.src.json
release/: BUILD.bazel  artifacts.yaml  util.bzl
templates/create-daml-app-test-resources/: index.test.ts
templates/create-daml-app/ui/: package.json.template
triggers/service/auth/: BUILD.bazel
(+1775 files in other folders)
