# Copyright (c) 2021 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools/edition:defs.bzl",
    "edition_binary",
)
load(
    "//bazel_tools:scala.bzl",
    "da_scala_binary",
    "da_scala_library",
)
load("@os_info//:os_info.bzl", "is_windows")

scala_deps = [
    "@maven//:com_typesafe_akka_akka_http_spray_json",
    "@maven//:com_typesafe_scala_logging_scala_logging",
    "@maven//:io_spray_spray_json",
]

scala_runtime_deps = [
    "@maven//:com_typesafe_akka_akka_slf4j",
    "@maven//:org_tpolecat_doobie_postgres",
]

runtime_deps = [
    "@maven//:ch_qos_logback_logback_classic",
    "@maven//:ch_qos_logback_logback_core",
    "@maven//:io_grpc_grpc_netty",
    "@maven//:org_xerial_sqlite_jdbc",
]

da_scala_binary(
    name = "sdk",
    srcs = glob(["src/main/scala/**/*.scala"]),
    main_class = "com.daml.sdk.SdkMain",
    resources = glob(["src/main/resources/**/*"]),
    scala_deps = scala_deps,
    scala_runtime_deps = scala_runtime_deps,
    # Navigator resources trigger this incorrectly
    unused_dependency_checker_mode = "off",
    visibility = ["//visibility:public"],
    runtime_deps = runtime_deps,
    deps = [
        "//extractor",
        "//language-support/codegen-main:codegen-main-lib",
        "//navigator/backend:navigator-library",
        "//triggers/runner:trigger-runner-lib",
        "//triggers/service:trigger-service",
        "//triggers/service/auth:oauth2-middleware",
        "//navigator/backend:backend-resources",
        "//navigator/backend:frontend-resources",
    ] + select({
        "//bazel_tools/edition:community": [
            "//daml-script/runner:script-runner-lib-ce",
            "//ledger-service/http-json:http-json-ce",
            "//ledger/sandbox:sandbox-ce",
            "//ledger/sandbox-classic:sandbox-classic-ce",
        ],
        "//bazel_tools/edition:enterprise": [
            "//daml-script/runner:script-runner-lib-ee",
            "//ledger-service/http-json:http-json-ee",
            "//ledger/sandbox:sandbox-ee",
            "//ledger/sandbox-classic:sandbox-classic-ee",
        ],
    }),
)

edition_binary(
    name = "sdk-ce",
    edition = "community",
    executable = "sdk",
)

edition_binary(
    name = "sdk-ee",
    edition = "enterprise",
    executable = "sdk",
)

# This is deliberately an sh_test on the actual SDK jars to test
# that the class paths end up being resolved properly and we really
# have the EE artifacts when we want to and only then.
sh_test(
    name = "validate",
    srcs = ["validate.sh"],
    args = [
        "$(location @local_jdk//:bin/java.exe)" if is_windows else "$(location @local_jdk//:bin/java)",
        "$(location :sdk_deploy.jar)",
        #"$(location :sdk_deploy.jar)",
    ],
    data = [
        ":sdk_deploy.jar",
        #":sdk_deploy.jar",
        "@local_jdk//:bin/java.exe" if is_windows else "@local_jdk//:bin/java",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)
